--- a/consument/pom.xml
+++ b/consument/pom.xml
@@ -19,5 +19,10 @@
             <artifactId>kafka_2.10</artifactId>
             <version>0.8.2.1</version>
         </dependency>
+        <dependency>
+            <groupId>com.espertech</groupId>
+            <artifactId>esper</artifactId>
+            <version>5.3.0</version>
+        </dependency>
     </dependencies>
 </project>
