--- a/kafka/config/server.properties
+++ b/kafka/config/server.properties
@@ -25,7 +25,7 @@ broker.id=0
 port=9092
 
 # Hostname the broker will bind to. If not set, the server will bind to all interfaces
-#host.name=localhost
+host.name=147.251.43.129
 
 # Hostname the broker will advertise to producers and consumers. If not set, it uses the
 # value for "host.name" if configured.  Otherwise, it will use the value returned from
