--- a/consument/src/main/resources/log4j.properties
+++ b/consument/src/main/resources/log4j.properties
@@ -1,7 +1,7 @@
 #Uncomment line 3 if want to log also into console
 # Root logger option
-log4j.rootLogger=INFO, stdout
-#log4j.rootLogger=INFO, file
+#log4j.rootLogger=INFO, stdout
+log4j.rootLogger=INFO, file
  
 #Uncomment lines 8-11 if want log also into console
 # Redirect log messages to console
