--- a/producer/pom.xml
+++ b/producer/pom.xml
@@ -4,12 +4,18 @@
     <groupId>fi.muni.cz</groupId>
     <artifactId>master-thesis</artifactId>
     <packaging>jar</packaging>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
     <name>master-thesis</name>
 
     <properties>
         <maven.compiler.plugin>1.8</maven.compiler.plugin>
     </properties>
+   
+    <parent>
+        <groupId>tomas-master-thesis</groupId>
+        <artifactId>master_thesis</artifactId>
+        <version>1.0</version>
+    </parent>
 
     <build>
         <plugins>
@@ -50,6 +56,11 @@
     </build>
 
     <dependencies>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>zookeeper-project</artifactId>
+            <version>${project.version}</version>
+        </dependency>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
