--- a/app/pom.xml
+++ b/app/pom.xml
@@ -16,8 +16,7 @@
     
     <modules>
         <module>producer</module>
-        <module>consument</module>
-        <module>zookeeper</module>
+        <module>consumer</module>
         <module>main-app</module>
     </modules>
 
