--- a/tools/zookeeper-cli/conf/zoo.cfg
+++ b/tools/zookeeper-cli/conf/zoo.cfg
@@ -1,6 +1,8 @@
 # the port at which the clients will connect
 clientPort=2181
 
+dataDir=~/tmp/zookeeper
+
 # specify all zookeeper servers
 # The fist port is used by followers to connect to the leader
 # The second one is used for leader election
