--- a/app/main-app/src/main/resources/log4j.properties
+++ b/app/main-app/src/main/resources/log4j.properties
@@ -1,6 +1,6 @@
 #Uncomment line 3 if want to log also into console
 # Root logger option
-log4j.rootLogger=INFO, stdout
+log4j.rootLogger=INFO, file, stdout
 
 #Uncomment lines 8-11 if want log also into console
 # Redirect log messages to console
@@ -11,8 +11,7 @@ log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1
 
 ## Redirect log messages to a log file
 log4j.appender.file=org.apache.log4j.RollingFileAppender
-##outputs to Tomcat home
-log4j.appender.file.File=logs/consument.log
+log4j.appender.file.File=logs/main-app.log
 log4j.appender.file.MaxFileSize=5MB
 log4j.appender.file.MaxBackupIndex=10
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
