--- a/app/consumer/src/main/resources/log4j.properties
+++ b/app/consumer/src/main/resources/log4j.properties
@@ -1,20 +1,14 @@
-#Uncomment line 3 if want to log also into console
-# Root logger option
-#log4j.rootLogger=INFO, stdout
-log4j.rootLogger=INFO, file
- 
+log4j.rootLogger=INFO, consumer, stdout
+
 #Uncomment lines 8-11 if want log also into console
 # Redirect log messages to console
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
-#log4j.appender.stdout.Target=System.out
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
 
-## Redirect log messages to a log file
-log4j.appender.file=org.apache.log4j.RollingFileAppender
-##outputs to Tomcat home
-log4j.appender.file.File=logs/consument.log
-log4j.appender.file.MaxFileSize=5MB
-log4j.appender.file.MaxBackupIndex=10
-log4j.appender.file.layout=org.apache.log4j.PatternLayout
-log4j.appender.file.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
+log4j.appender.consumer=org.apache.log4j.RollingFileAppender
+log4j.appender.consumer.File=logs/consumer.log
+log4j.appender.consumer.layout=org.apache.log4j.PatternLayout
+log4j.appender.consumer.MaxFileSize=5MB
+log4j.appender.consumer.MaxBackupIndex=10
+log4j.appender.consumer.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
