--- a/app/main-app/src/main/resources/log4j.properties
+++ b/app/main-app/src/main/resources/log4j.properties
@@ -1,18 +1,23 @@
 #Uncomment line 3 if want to log also into console
 # Root logger option
-log4j.rootLogger=INFO, file, stdout
+log4j.rootLogger=INFO, consumer, producer, stdout
 
 #Uncomment lines 8-11 if want log also into console
 # Redirect log messages to console
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
-#log4j.appender.stdout.Target=System.out
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
 
-## Redirect log messages to a log file
-log4j.appender.file=org.apache.log4j.RollingFileAppender
-log4j.appender.file.File=logs/main-app.log
-log4j.appender.file.MaxFileSize=5MB
-log4j.appender.file.MaxBackupIndex=10
-log4j.appender.file.layout=org.apache.log4j.PatternLayout
-log4j.appender.file.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
+log4j.appender.consumer=org.apache.log4j.RollingFileAppender
+log4j.appender.consumer.File=logs/main-app-consumer.log
+log4j.appender.consumer.layout=org.apache.log4j.PatternLayout
+log4j.appender.consumer.MaxFileSize=5MB
+log4j.appender.consumer.MaxBackupIndex=10
+log4j.appender.consumer.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
+
+log4j.appender.producer=org.apache.log4j.RollingFileAppender
+log4j.appender.producer.File=logs/main-app-producer.log
+log4j.appender.producer.layout=org.apache.log4j.PatternLayout
+log4j.appender.producer.MaxFileSize=5MB
+log4j.appender.producer.MaxBackupIndex=10
+log4j.appender.producer.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
