--- a/tools/zookeeper-cli/conf/zoo.cfg
+++ b/tools/zookeeper-cli/conf/zoo.cfg
@@ -12,3 +12,5 @@ dataDir=~/tmp/zookeeper
 # The second one is used for leader election
 server.1=147.251.43.129:2888:3888
 server.2=147.251.43.130:2888:3888
+server.3=147.251.43.150:2888:3888
+server.4=147.251.43.138:2888:3888
