--- a/app/consumer/pom.xml
+++ b/app/consumer/pom.xml
@@ -77,6 +77,11 @@
             <version>1.7.9</version>
         </dependency>
         <dependency>
+            <groupId>com.googlecode.json-simple</groupId>
+            <artifactId>json-simple</artifactId>
+            <version>1.1.1</version>
+        </dependency>
+        <dependency>
             <groupId>log4j</groupId>
             <artifactId>log4j</artifactId>
             <version>1.2.17</version>
