--- a/app/pom.xml
+++ b/app/pom.xml
@@ -19,6 +19,7 @@
         <module>consumer</module>
         <module>main-app</module>
         <module>cleaner</module>
+        <module>data-store</module>
     </modules>
 
     <dependencies>
