Graylog - configuration for logging into the graylog. v.1

--- a/app/producer/src/main/resources/log4j.properties
+++ b/app/producer/src/main/resources/log4j.properties
@@ -1,6 +1,6 @@
 #Uncomment line 3 if want to log also into console
 # Root logger option
-log4j.rootLogger=INFO, producer, stdout
+log4j.rootLogger=INFO, graylog2, stdout
 
 #Uncomment lines 8-11 if want log also into console
 # Redirect log messages to console
@@ -14,3 +14,13 @@ log4j.appender.producer.layout=org.apache.log4j.PatternLayout
 log4j.appender.producer.MaxFileSize=5MB
 log4j.appender.producer.MaxBackupIndex=10
 log4j.appender.producer.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
+
+log4j.appender.graylog2=org.graylog2.log.GelfAppender
+log4j.appender.graylog2.graylogHost=tcp:147.251.43.129
+log4j.appender.graylog2.graylogPort=12201
+log4j.appender.graylog2.facility=gelf-java
+log4j.appender.graylog2.layout=org.apache.log4j.PatternLayout
+log4j.appender.graylog2.extractStacktrace=true
+log4j.appender.graylog2.addExtendedInformation=true
+log4j.appender.graylog2.additionalFields={'environment': 'DEV', 'application': 'MyAPP'}
+
