--- a/app/producer/pom.xml
+++ b/app/producer/pom.xml
@@ -39,6 +39,12 @@
             <version>1.2.17</version>
         </dependency>
         <dependency>
+            <groupId>org.graylog2</groupId>
+            <artifactId>gelfj</artifactId>
+            <version>1.1.12</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
             <groupId>com.googlecode.json-simple</groupId>
             <artifactId>json-simple</artifactId>
             <version>1.1.1</version>
